syntax = "proto3";

package messagespackageexercice.exercice;

option java_package = "servicespackagesexercice.exercice.project";
option java_multiple_files = true;


message BookSearch
{
  string name = 1;
  string author = 2;
  string genre = 3;
}