syntax = "proto3";

package messagespackageexercice.exercice;

option java_package = "servicespackagesexercice.exercice.project";
option java_multiple_files = true;

message LoginRequest
{
  string username = 1;
  string password = 2;
}